# CONFIG_FILE ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)

set( DOXYGEN_DOXYFILE_ENCODING       UTF-8)
set( DOXYGEN_PROJECT_NAME            "libadc-cxx" )
set( DOXYGEN_PROJECT_NUMBER          "1.0.0" )
set( DOXYGEN_PROJECT_BRIEF           "Structured logging for scientific computing" )
#set( DOXYGEN_PROJECT_LOGO            "" )
#set( DOXYGEN_OUTPUT_DIRECTORY        doc/doxygen )
set( DOXYGEN_CREATE_SUBDIRS          NO )
set( DOXYGEN_ALLOW_UNICODE_NAMES     NO )
set( DOXYGEN_OUTPUT_LANGUAGE         English )
set( DOXYGEN_BRIEF_MEMBER_DESC       YES )
set( DOXYGEN_REPEAT_BRIEF            YES )
set( DOXYGEN_ABBREVIATE_BRIEF        "The $name class" "The $name widget"  "The $name file" "is" "provides" "specifies" "contains" "represents" "a" "an" "the" )
set( DOXYGEN_ALWAYS_DETAILED_SEC     NO )
set( DOXYGEN_INLINE_INHERITED_MEMB   YES )
set( DOXYGEN_FULL_PATH_NAMES         YES )
set( DOXYGEN_STRIP_FROM_PATH         ${CMAKE_SOURCE_DIR} )
set( DOXYGEN_SHORT_NAMES             NO )
set( DOXYGEN_JAVADOC_AUTOBRIEF       NO )
set( DOXYGEN_QT_AUTOBRIEF            NO )
set( DOXYGEN_MULTILINE_CPP_IS_BRIEF  NO )
set( DOXYGEN_INHERIT_DOCS            YES )
set( DOXYGEN_SEPARATE_MEMBER_PAGES   NO )
set( DOXYGEN_TAB_SIZE                4 )
set( DOXYGEN_OPTIMIZE_OUTPUT_FOR_C   NO )
set( DOXYGEN_OPTIMIZE_OUTPUT_JAVA    NO )
set( DOXYGEN_OPTIMIZE_FOR_FORTRAN    NO )
set( DOXYGEN_OPTIMIZE_OUTPUT_VHDL    NO )
set( DOXYGEN_MARKDOWN_SUPPORT        YES )
set( DOXYGEN_TOC_INCLUDE_HEADINGS    0 )
set( DOXYGEN_AUTOLINK_SUPPORT        YES )
set( DOXYGEN_BUILTIN_STL_SUPPORT     NO )
set( DOXYGEN_CPP_CLI_SUPPORT         NO )
set( DOXYGEN_SIP_SUPPORT             NO )
set( DOXYGEN_IDL_PROPERTY_SUPPORT    YES )
set( DOXYGEN_DISTRIBUTE_GROUP_DOC    NO )
set( DOXYGEN_GROUP_NESTED_COMPOUNDS  NO )
set( DOXYGEN_SUBGROUPING             YES )
set( DOXYGEN_INLINE_GROUPED_CLASSES  NO )
set( DOXYGEN_INLINE_SIMPLE_STRUCTS   NO )
set( DOXYGEN_TYPEDEF_HIDES_STRUCT    NO )
set( DOXYGEN_LOOKUP_CACHE_SIZE       0 )
set( DOXYGEN_EXTRACT_ALL             YES )
set( DOXYGEN_EXTRACT_PRIVATE         NO )
set( DOXYGEN_EXTRACT_PACKAGE         NO )
set( DOXYGEN_EXTRACT_STATIC          NO )
set( DOXYGEN_EXTRACT_LOCAL_CLASSES   YES )
set( DOXYGEN_EXTRACT_LOCAL_METHODS   NO )
set( DOXYGEN_EXTRACT_ANON_NSPACES    NO )
set( DOXYGEN_HIDE_UNDOC_MEMBERS      NO )
set( DOXYGEN_HIDE_UNDOC_CLASSES      NO )
set( DOXYGEN_HIDE_FRIEND_COMPOUNDS   NO )
set( DOXYGEN_HIDE_IN_BODY_DOCS       NO )
set( DOXYGEN_INTERNAL_DOCS           NO )
set( DOXYGEN_CASE_SENSE_NAMES        YES )
set( DOXYGEN_HIDE_SCOPE_NAMES        NO )
set( DOXYGEN_HIDE_COMPOUND_REFERENCE= NO )
set( DOXYGEN_SHOW_INCLUDE_FILES      YES )
set( DOXYGEN_SHOW_GROUPED_MEMB_INC   NO )
set( DOXYGEN_FORCE_LOCAL_INCLUDES    NO )
set( DOXYGEN_INLINE_INFO             YES )
set( DOXYGEN_SORT_MEMBER_DOCS        NO )
set( DOXYGEN_SORT_BRIEF_DOCS         NO )
set( DOXYGEN_SORT_MEMBERS_CTORS_1ST  NO )
set( DOXYGEN_SORT_GROUP_NAMES        NO )
set( DOXYGEN_SORT_BY_SCOPE_NAME      NO )
set( DOXYGEN_STRICT_PROTO_MATCHING   NO )
set( DOXYGEN_GENERATE_TODOLIST       YES )
set( DOXYGEN_GENERATE_TESTLIST       YES )
set( DOXYGEN_GENERATE_BUGLIST        YES )
set( DOXYGEN_GENERATE_DEPRECATEDLIST= YES )
set( DOXYGEN_MAX_INITIALIZER_LINES   30 )
set( DOXYGEN_SHOW_USED_FILES         YES )
set( DOXYGEN_SHOW_FILES              YES )
set( DOXYGEN_SHOW_NAMESPACES         YES )
set( DOXYGEN_QUIET                   NO )
set( DOXYGEN_WARNINGS                YES )
set( DOXYGEN_WARN_IF_UNDOCUMENTED    YES )
set( DOXYGEN_WARN_IF_DOC_ERROR       YES )
set( DOXYGEN_WARN_NO_PARAMDOC        NO )
set( DOXYGEN_WARN_AS_ERROR           NO )
set( DOXYGEN_WARN_FORMAT             "$file:$line: $text" )
#set( DOXYGEN_INPUT                   ${CMAKE_SOURCE_DIR}/adc ${CMAKE_SOURCE_DIR}/examples )
set( DOXYGEN_INPUT_ENCODING          UTF-8 )
set( DOXYGEN_FILE_PATTERNS           "*.c" "*.cc" "*.cxx" "*.cpp" "*.c++" "*.java" "*.ii" "*.ixx" "*.ipp" "*.i++" "*.inl" "*.idl" "*.ddl" "*.odl" "*.h" "*.hh" "*.hxx" "*.hpp" "*.h++" "*.cs" "*.d" "*.php" "*.php4" "*.php5" "*.phtml" "*.inc" "*.m" "*.markdown" "*.md" "*.mm" "*.dox" "*.py" "*.pyw" "*.f90" "*.f95" "*.f03" "*.f08" "*.f" "*.for" "*.tcl" "*.vhd" "*.vhdl" "*.ucf" "*.qsf" )
set( DOXYGEN_RECURSIVE               YES )
#set( DOXYGEN_EXCLUDE                 )
#set( DOXYGEN_EXCLUDE_SYMLINKS        NO )
#set( DOXYGEN_EXCLUDE_PATTERNS        )
#set( DOXYGEN_EXCLUDE_SYMBOLS         )
#set( DOXYGEN_EXAMPLE_PATH            )
#set( DOXYGEN_EXAMPLE_PATTERNS        "*" )
set( DOXYGEN_EXAMPLE_RECURSIVE       NO )
#set( DOXYGEN_IMAGE_PATH              )
#set( DOXYGEN_INPUT_FILTER            )
#set( DOXYGEN_FILTER_PATTERNS         )
set( DOXYGEN_FILTER_SOURCE_FILES     NO )
#set( DOXYGEN_FILTER_SOURCE_PATTERNS  )
#set( DOXYGEN_USE_MDFILE_AS_MAINPAGE  )
set( DOXYGEN_SOURCE_BROWSER          YES )
set( DOXYGEN_INLINE_SOURCES          NO )
set( DOXYGEN_STRIP_CODE_COMMENTS     NO )
set( DOXYGEN_REFERENCED_BY_RELATION  NO )
set( DOXYGEN_REFERENCES_RELATION     NO )
set( DOXYGEN_REFERENCES_LINK_SOURCE  YES )
set( DOXYGEN_SOURCE_TOOLTIPS         YES )
set( DOXYGEN_USE_HTAGS               NO )
set( DOXYGEN_VERBATIM_HEADERS        YES )
set( DOXYGEN_ALPHABETICAL_INDEX      YES )
set( DOXYGEN_COLS_IN_ALPHA_INDEX     5 )
#set( DOXYGEN_IGNORE_PREFIX           )
set( DOXYGEN_GENERATE_HTML           YES )
set( DOXYGEN_HTML_OUTPUT             html )
set( DOXYGEN_HTML_FILE_EXTENSION     .html )
#set( DOXYGEN_HTML_HEADER             )
#set( DOXYGEN_HTML_FOOTER             )
#set( DOXYGEN_HTML_STYLESHEET         )
#set( DOXYGEN_HTML_EXTRA_STYLESHEET   )
#set( DOXYGEN_HTML_EXTRA_FILES        )
set( DOXYGEN_HTML_COLORSTYLE_HUE     220 )
set( DOXYGEN_HTML_COLORSTYLE_SAT     100 )
set( DOXYGEN_HTML_COLORSTYLE_GAMMA   80 )
set( DOXYGEN_HTML_TIMESTAMP          NO )
set( DOXYGEN_HTML_DYNAMIC_MENUS      YES )
set( DOXYGEN_HTML_DYNAMIC_SECTIONS   NO )
set( DOXYGEN_HTML_INDEX_NUM_ENTRIES  100 )
set( DOXYGEN_GENERATE_DOCSET         NO )
set( DOXYGEN_DOCSET_FEEDNAME         "Doxygen generated docs" )
set( DOXYGEN_DOCSET_BUNDLE_ID        gov.sandia.ADCTDoc )
set( DOXYGEN_DOCSET_PUBLISHER_ID     gov.sandia.ADCTDoc.documentation )
set( DOXYGEN_DOCSET_PUBLISHER_NAME   Sandia )
set( DOXYGEN_GENERATE_HTMLHELP       NO )
set( DOXYGEN_GENERATE_CHI            NO )
set( DOXYGEN_BINARY_TOC              NO )
set( DOXYGEN_TOC_EXPAND              NO )
set( DOXYGEN_GENERATE_QHP            NO )
set( DOXYGEN_QHP_NAMESPACE           gov.sandia.ADCTDoc )
set( DOXYGEN_QHP_VIRTUAL_FOLDER      doc )
set( DOXYGEN_GENERATE_ECLIPSEHELP    NO )
set( DOXYGEN_ECLIPSE_DOC_ID          gov.sandia.ADCTDoc )
set( DOXYGEN_DISABLE_INDEX           NO )
set( DOXYGEN_GENERATE_TREEVIEW       NO )
set( DOXYGEN_ENUM_VALUES_PER_LINE    4 )
set( DOXYGEN_TREEVIEW_WIDTH          250 )
set( DOXYGEN_EXT_LINKS_IN_WINDOW     NO )
set( DOXYGEN_FORMULA_FONTSIZE        10 )
set( DOXYGEN_FORMULA_TRANSPARENT     YES )
set( DOXYGEN_USE_MATHJAX             NO )
set( DOXYGEN_SEARCHENGINE            YES )
set( DOXYGEN_SERVER_BASED_SEARCH     NO )
set( DOXYGEN_EXTERNAL_SEARCH         NO )
set( DOXYGEN_SEARCHDATA_FILE         searchdata.xml )
set( DOXYGEN_GENERATE_LATEX          NO )
set( DOXYGEN_LATEX_OUTPUT            latex )
set( DOXYGEN_LATEX_CMD_NAME          latex )
set( DOXYGEN_MAKEINDEX_CMD_NAME      makeindex )
set( DOXYGEN_COMPACT_LATEX           NO )
set( DOXYGEN_PAPER_TYPE              a4 )
set( DOXYGEN_PDF_HYPERLINKS          YES )
set( DOXYGEN_USE_PDFLATEX            YES )
set( DOXYGEN_LATEX_BATCHMODE         NO )
set( DOXYGEN_LATEX_HIDE_INDICES      NO )
set( DOXYGEN_LATEX_SOURCE_CODE       NO )
set( DOXYGEN_LATEX_BIB_STYLE         plain )
set( DOXYGEN_LATEX_TIMESTAMP         NO )
set( DOXYGEN_GENERATE_RTF            NO )
set( DOXYGEN_RTF_OUTPUT              rtf )
set( DOXYGEN_COMPACT_RTF             NO )
set( DOXYGEN_RTF_HYPERLINKS          NO )
set( DOXYGEN_RTF_SOURCE_CODE         NO )
set( DOXYGEN_GENERATE_MAN            NO )
set( DOXYGEN_MAN_OUTPUT              man )
set( DOXYGEN_MAN_EXTENSION           .3 )
#set( DOXYGEN_MAN_SUBDIR              )
set( DOXYGEN_MAN_LINKS               NO )
set( DOXYGEN_GENERATE_XML            NO )
set( DOXYGEN_XML_OUTPUT              xml )
set( DOXYGEN_XML_PROGRAMLISTING      YES )
set( DOXYGEN_GENERATE_DOCBOOK        NO )
set( DOXYGEN_DOCBOOK_OUTPUT          docbook )
set( DOXYGEN_DOCBOOK_PROGRAMLISTING  NO )
set( DOXYGEN_GENERATE_AUTOGEN_DEF    NO )
set( DOXYGEN_GENERATE_PERLMOD        NO )
set( DOXYGEN_PERLMOD_LATEX           NO )
set( DOXYGEN_PERLMOD_PRETTY          YES )
set( DOXYGEN_ENABLE_PREPROCESSING    YES )
set( DOXYGEN_MACRO_EXPANSION         NO )
set( DOXYGEN_EXPAND_ONLY_PREDEF      NO )
set( DOXYGEN_SEARCH_INCLUDES         YES )
set( DOXYGEN_SKIP_FUNCTION_MACROS    YES )
set( DOXYGEN_ALLEXTERNALS            NO )
set( DOXYGEN_EXTERNAL_GROUPS         YES )
set( DOXYGEN_EXTERNAL_PAGES          YES )
set( DOXYGEN_CLASS_DIAGRAMS          YES )
set( DOXYGEN_HIDE_UNDOC_RELATIONS    YES )
set( DOXYGEN_HAVE_DOT                YES )
set( DOXYGEN_CLASS_GRAPH             YES )
set( DOXYGEN_COLLABORATION_GRAPH     YES )
set( DOXYGEN_GROUP_GRAPHS            YES )
set( DOXYGEN_UML_LOOK                NO )
set( DOXYGEN_UML_LIMIT_NUM_FIELDS    10 )
set( DOXYGEN_TEMPLATE_RELATIONS      NO )
set( DOXYGEN_INCLUDE_GRAPH           YES )
set( DOXYGEN_INCLUDED_BY_GRAPH       YES )
set( DOXYGEN_CALL_GRAPH              NO )
set( DOXYGEN_CALLER_GRAPH            NO )
set( DOXYGEN_GRAPHICAL_HIERARCHY     YES )
set( DOXYGEN_DIRECTORY_GRAPH         YES )
set( DOXYGEN_DOT_IMAGE_FORMAT        png )
set( DOXYGEN_INTERACTIVE_SVG         NO )
set( DOXYGEN_DOT_GRAPH_MAX_NODES     50 )
set( DOXYGEN_MAX_DOT_GRAPH_DEPTH     0 )
set( DOXYGEN_DOT_TRANSPARENT         NO )
set( DOXYGEN_DOT_MULTI_TARGETS       NO )
set( DOXYGEN_GENERATE_LEGEND         YES )
set( DOXYGEN_DOT_CLEANUP             YES )

doxygen_add_docs(doc
	${CMAKE_SOURCE_DIR}/adc ${CMAKE_SOURCE_DIR}/examples
	ALL
	COMMENT "USING DOXYGEN"
)

install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html"
            DESTINATION "share/doc/adc/${PROJECT_NAME}"
	    FILES_MATCHING PATTERN "*"
)
